<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RohitProject5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt1">Kindly make a selection:</string>
    <string name="rdb1">Tea</string>
    <string name="rdb2">Coffee</string>
    <string name="rdb3">Hot Chocolate</string>
    <string name="rdb4">Juice</string>
    <string name="btn1">Enter</string>

</resources>
